# crane_gps_watch

./: .gitignore  .travis.yml  2014-11-08_03-24-43.tcx  2014-11-08_04-26-50.tcx  CONTRIBUTORS  Callback.hpp  DataTypes.hpp  DebugWriter.hpp  Makefile  Makefile.am  Makefile.in  Makefile.win  README  README.md  TcxWriter.cpp  TcxWriter.hpp  Watch.cpp  Watch.hpp  aclocal.m4  autoimport.sh  autoimporter.py  config.h.in  configure  configure.ac  crane_gps_watch_client  crane_gps_watch_client.cpp  crane_gps_watch_client.dev  donate.html  make_release.sh  test.tcx
data/: Makefile.am  Makefile.in  gps_watch_monitor.desktop  gps_watch_onconnect.sh  icon.ico.in  start_watch_client.bat.in
snoops/: README  block_cs.cpp  gen_dl_epo.pl  parse_epo.pl  parse_epo2.pl  parse_epo_dl.pl  parse_log.pl
src/: Callback.hpp  DataTypes.cpp  DataTypes.hpp  DebugWriter.cpp  DebugWriter.hpp  DeviceInterface.hpp  GpsLint.cpp  GpsLint.hpp  ImageLink.cpp  ImageLink.hpp  ImageWriter.cpp  ImageWriter.hpp  LapWriter.cpp  LapWriter.hpp  Makefile.am  Makefile.in  MemoryBlock.cpp  MemoryBlock.hpp  SerialLink.cpp  SerialLink.hpp  SerialPort.cpp  SerialPort.hpp  SerialPortLinux.inc  SerialPortMacOSX.inc  SerialPortWindows.inc  TcxWriter.cpp  TcxWriter.hpp  Watch.cpp  Watch.hpp  XmlFileWriter.cpp  XmlFileWriter.hpp  crane_gps_watch_client.cpp  gps_watch_monitor.py.in  main.cpp  setup.ss.in  windows.rc.in
test/: 000_help.sh  001_from_image.sh  002_from_to_image.sh  003_from_image_split.sh  004_exclusive_args.sh  005_image_not_found.sh  006_invalid_serial_device.sh  007_output_not_writable.sh  008_lint_images.sh  009_expect_coordinates.sh  010_knedlyk_running_cycling.sh  011_assert_profile.sh  012_dst_time.sh  013_languages.sh  014_lap_count.sh  Makefile.am  Makefile.in  common.sh  from_image.sh  from_to_image.sh  help.sh
test/not_all_laps_consumed/: afjclark_20160118.txt
test/not_all_laps_consumed/gps-master-export/: 20151107101902.csv  20151107102400.csv  20151107110606.csv  20151230142119.csv  20151230145225.csv  20160116151358.csv
