# Copyright (C) 2014 mru@sisyphus.teil.cc


TESTS = 000_help.sh \
				001_from_image.sh \
				002_from_to_image.sh \
				003_from_image_split.sh \
				004_exclusive_args.sh \
				005_image_not_found.sh \
				006_invalid_serial_device.sh \
				007_output_not_writable.sh


EXTRA_DIST = image.bin TrainingCenterDatabasev2.xsd

MOSTLYCLEANFILES = *.tcx 002_image2.bin
